[package]
name = "libp2p-helper"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "A small set of utilities for libp2p"
repository = "https://github.com/dariusc93/libp2p-helper"
readme = "README.md"
keywords = ["libp2p", "p2p", "networking"]
authors = ["Darius Clark"]
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.50", default-features = false }
futures = "0.3"
tracing = "0.1"
anyhow = "1.0"

[features]
default = ["floodsub", "gossipsub"]
floodsub = ["libp2p/floodsub"]
gossipsub = ["libp2p/gossipsub"]

[dev-dependencies]
libp2p = { features = ["full"], version = "0.50" }
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
libp2p = { git = "https://github.com/kpp/rust-libp2p", branch = "libp2p-quic" }